<resources>
    <string name="app_name">BasketApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_a_text">Team A</string>
    <string name="team_b_text">Team B</string>
    <string name="score_plus_1">+1</string>
    <string name="end_string">Fin</string>
    <string name="end_game">terminar juego</string>
</resources>