<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ViewModel"
            type="com.example.basketapp.MainViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principalFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/text_team_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_gap"
        android:text="@string/team_a_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/score_team_a"
        app:layout_constraintEnd_toEndOf="@+id/score_team_a"
        app:layout_constraintStart_toStartOf="@+id/score_team_a" />

    <TextView
        android:id="@+id/score_team_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_gap"
        tools:text="0"
        android:text="@={ViewModel.scoreA}"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/action_score_team_a"
        app:layout_constraintEnd_toEndOf="@+id/action_score_team_a"
        app:layout_constraintStart_toStartOf="@+id/action_score_team_a" />

    <Button
        android:id="@+id/action_score_team_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/min_gap"
        android:text="@string/score_plus_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/action_score_team_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_gap"
        android:text="@string/score_plus_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/score_team_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        tools:text="0"
        android:text="@={ViewModel.scoreB}"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="@+id/action_score_team_b"
        app:layout_constraintStart_toStartOf="@+id/action_score_team_b"
        app:layout_constraintTop_toBottomOf="@+id/action_score_team_b" />

    <TextView
        android:id="@+id/text_team_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_gap"
        android:text="@string/team_b_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="@+id/score_team_b"
        app:layout_constraintStart_toStartOf="@+id/score_team_b"
        app:layout_constraintTop_toBottomOf="@+id/score_team_b" />

    <Button
        android:id="@+id/action_end_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_team_b" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>