<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ViewModel"
            type="com.example.basketapp.MainViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PointsFragment">


    <TextView
        android:id="@+id/text_team_b_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Big_gap"
        android:text="@string/team_a_text"
        app:layout_constraintBottom_toTopOf="@+id/score_team_a_points"
        app:layout_constraintEnd_toEndOf="@+id/score_team_a_points"
        app:layout_constraintStart_toStartOf="@+id/score_team_a_points" />

    <TextView
        android:id="@+id/score_team_a_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/Big_gap"
        android:text="@={ViewModel.scoreA}"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="0"/>

    <TextView
        android:id="@+id/text_team_a_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Big_gap"
        android:text="@string/team_b_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_team_b_points" />

    <TextView
        android:id="@+id/score_team_b_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Big_gap"
        android:text="@={ViewModel.scoreB}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        tools:text="0"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/action_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_team_a_points" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>